# Aether-2

./: .gitignore  Aether-Ai Companion.md  CONTRIBUTING.md  LICENSE  MONDAY_INTEGRATION_SUMMARY.md  PROJECT_PLAN.md
.kiro/specs/aether-ai-companion/: design.md  requirements.md  tasks.md
aether/: .env.example  ACTUAL_STATUS_REPORT.md  FINAL_REALITY_CHECK.md  Makefile  README.md  REAL_TIME_SYNC_SUMMARY.md  TASK_5_4_COMPLETION_SUMMARY.md  TASK_5_4_ENHANCED_COMPLETION_SUMMARY.md  TASK_7_1_COMPLETION_SUMMARY.md  TASK_7_2_COMPLETION_SUMMARY.md  TASK_7_3_COMPLETION_SUMMARY.md  TASK_8_1_COMPLETION_SUMMARY.md  alembic.ini  api_main.py  flask_main.py  initialize_system.py  main.py  pyproject.toml  requirements-minimal.txt  requirements-windows.txt  requirements.txt  run-dev.ps1  setup-dev.ps1  simple_api_server.py  simple_main.py  test_actual_functionality.py  test_ai_providers.py  test_api_basic.py  test_api_complete.py  test_api_final.py  test_api_gateway.py  test_api_simple.py  test_calendar_import.py  test_complete_database_system.py  test_complete_integration.py  test_context_minimal.py  test_conversation_system.py  test_converter_minimal.py  test_database_setup.py  test_debug_import.py  (+39 more)
aether/alembic/: env.py
aether/core/: __init__.py
aether/core/ai/: __init__.py  prompts.py  providers.py
aether/core/api/: __init__.py  auth.py  gateway.py  middleware.py  sync.py  websocket.py
aether/core/api/routes/: __init__.py  auth.py  conversations.py  health.py  ideas.py  memory.py  monday.py  tasks.py
aether/core/conversation/: __init__.py  context.py  context_simple.py  manager.py
aether/core/database/: __init__.py  connection.py  memory_integration.py  migrations.py  models.py  vector_store.py
aether/core/ideas/: __init__.py  connections.py  converter.py  database_helpers.py  processor.py  types.py
aether/core/integrations/: __init__.py  calendar_types.py  config.py  google_calendar.py  google_calendar_simple.py  monday_com.py  monday_types.py  monday_webhook.py
aether/core/memory/: __init__.py  manager.py  types.py
aether/core/notifications/: __init__.py  deadline_monitor.py  intelligent_prioritizer.py  notification_manager.py  notification_types.py  reminder_engine.py
aether/core/tasks/: __init__.py  extractor.py  task_types.py
aether/desktop/: README.md  package-lock.json  package.json
aether/desktop/src/: dashboard.html  index.html  quick-capture.html
aether/desktop/src-tauri/: Cargo.toml  tauri.conf.json
aether/desktop/src-tauri/src/: api.rs  autostart.rs  hotkeys.rs  main.rs  tray.rs
aether/desktop/src/scripts/: conversation.js  dashboard.js  main.js
aether/desktop/src/styles/: conversation.css  dashboard.css  main.css
aether/mobile/: README.md  index.js  package.json
aether/mobile/src/: App.tsx
aether/mobile/src/components/: ErrorBoundary.tsx
aether/mobile/src/contexts/: AuthContext.tsx  DataContext.tsx  ThemeContext.tsx
aether/mobile/src/navigation/: AppNavigator.tsx
aether/mobile/src/screens/: AuthScreen.tsx  ConversationScreen.tsx  DashboardScreen.tsx  IdeaCaptureScreen.tsx  LoadingScreen.tsx  OnboardingScreen.tsx  SettingsScreen.tsx  TasksScreen.tsx
aether/mobile/src/services/: ApiService.ts  BackgroundService.ts  NotificationService.ts  StorageService.ts  SyncService.ts
aether/mobile/src/utils/: initialization.ts
aether/shared/: __init__.py  serialization.py
aether/shared/config/: __init__.py  settings.py
aether/shared/models/: __init__.py  base.py
aether/shared/schemas/: __init__.py  base.py  conversation.py  idea.py  memory.py  task.py
aether/shared/utils/: __init__.py  logging.py  simple_validation.py  validation.py
aether/tests/: __init__.py
aether/tests/integration/: test_api_gateway.py  test_complete_api.py  test_external_integrations.py
aether/tests/unit/: __init__.py  test_database_models.py  test_google_calendar.py  test_monday_com.py  test_notification_system.py  test_notifications.py  test_task_extraction.py  test_validation_serialization.py  test_vector_store.py
