[package]
name = "aether-desktop"
version = "0.1.0"
description = "Aether AI Companion Desktop Application"
authors = ["Aether AI Team"]
license = "MIT"
repository = "https://github.com/aether-ai/aether-companion"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [
    "api-all",
    "system-tray",
    "global-shortcut",
    "notification",
    "window-all",
    "fs-all",
    "http-all",
    "os-all"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
env_logger = "0.10"
log = "0.4"
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0"

# Platform-specific dependencies
[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]